fixed navbar overflow

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,11 +6,12 @@ html,
 body {
   padding: 0;
   margin: 0;
+  overflow-x: hidden !important;
   font-family: "poppins", sans-serif;
 }
 
 body {
-  overflow-x: hidden !important;
+  position: relative;
 }
 
 a {
